file structure for week 5

--- a/CS601_HW4_Jones/index.html
+++ b/CS601_HW4_Jones/index.html
@@ -44,11 +44,11 @@
 
     <!--Radio Buttons-->
     <section class="form__section">
-    <label for="" class="form__h2">What kind of themes interest you most in a drink menu?</label>
-    <label class="input"><input type="radio" name="seasonal" value="seasonal" id=""> Holiday/Seasonal</label>
-    <label class="input"><input type="radio" name="tropical" value="seasonal" id=""> Tropical</label>
-    <label class="input"><input type="radio" name="local" value="seasonal" id=""> Local Ingredients</label>
-    <label class="input"><input type="radio" name="tasting" value="seasonal" id=""> Tasting Flights</label>
+    <label class="form__h2">What kind of themes interest you most in a drink menu?</label>
+    <label class="input"><input type="radio" name="seasonal" value="seasonal" > Holiday/Seasonal</label>
+    <label class="input"><input type="radio" name="tropical" value="seasonal" > Tropical</label>
+    <label class="input"><input type="radio" name="local" value="seasonal" > Local Ingredients</label>
+    <label class="input"><input type="radio" name="tasting" value="seasonal" > Tasting Flights</label>
     </section>
 
     <section class="form__section">
