--- a/CS601_HW5_Jones/index.html
+++ b/CS601_HW5_Jones/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <h1>Paige Madeline Jones</h1>
-<h2>Degree Information</h2>
+<h2>Scholastic Achievements</h2>
 <button>Get Degree Data</button>
 
-<script src="js/app.js"></script>
+<script src="js/app.js"></script> <!--link to js which reads and displays my json data-->
 </body>
 </html>
