--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
     <footer> <!--footer-->
        <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
     </footer>
+
+
+<div class="popup">
+  <div class="wheel-popup first-child">
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+<a class="button" href="#">BUY TICKETS NOW!</a>
+</div>
+<span class="boxzilla-close-icon">×</span>
+</div>
   </body>
 </html>
