create title logo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!---Link to google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
   <!---Link to javascript-->
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </head>
@@ -21,7 +21,9 @@
     <header> <!--Navigation Bar-->
       <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
         <div id="navbar__grid--title">
-        <a href="#" class="navbar__title">WOLF TREE</a>
+        <a href="#" class="navbar__title">
+        <img class="img__logo" src="/images/WOLFTREELOGO.png" alt="WOLFTREE WITH LEAVES AROUND IT">
+        </a>
         </div>
 
 
@@ -35,10 +37,10 @@
 
         <!--ALERT BUTTON-->
         <div class="main-content" id="navbar__grid--right">
-        <p><a class="show-popup" href="#" data-showpopup="1"> <!--popup link opens on click of image-->
-        <img class="img__newyears" src="/images/NYEbadge.png" alt="art deco new years eve promo">
+        <a class="show-popup" href="#" data-showpopup="1"> <!--popup link opens on click of image-->
+        <img class="img__newyears" src="/images/artdecobadge.png" alt="art deco new years eve promo">
         </a>
-        </p>
+
 
         <div class="overlay-bg"> <!--gray out background when pop up is open-->
         </div>
@@ -56,6 +58,7 @@
           <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
         </a>
       </div>--->
+
       </nav>
     </header>
 
