work on footer and switch to instagram

--- a/findUs.html
+++ b/findUs.html
@@ -10,24 +10,22 @@
   <!---Link to google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 
   <body>
     <header> <!--Navigation Bar-->
       <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
         <div id="navbar__grid--title">
-        <a href="#" class="navbar__title">WOLF TREE</a>
+        <a href="#" class="navbar__title">
+        <img class="img__logo" src="/images/WOLFTREELOGO.png" alt="Wolf tree with leaves around it">
+        </a>
         </div>
         <div id="navbar__grid--menu">
         <a class="navbar__link" href="index.html">ABOUT</a>
         <a class="navbar__link" href="menu.html">MENU</a>
         <a class="navbar__link" href="spotlight.html">SPOTLIGHT</a>
         <a class="navbar__link" href="findUs.html">FIND US</a>
-        </div>
-        <div id="navbar__grid--right">
-        <a href="https://www.instagram.com/wolftreevt/">
-          <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
-        </a>
         </div>
       </nav>
     </header>
@@ -80,9 +78,14 @@
       </section>
 
 
-    <footer> <!--footer-->
-       <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
-    </footer>
+      <!--footer-->
+      <footer>
+         <p id="footer__grid--top">
+         <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Newsletter</a>
+         <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Instagram</a>
+         <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
+         <img class="img__leaf"src="/images/leafstraight.png"</p>
+      </footer>
 
   </body>
 </html>
