--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
       <nav class="navbar">  <!--will use css instead of align next week - just for vizual purposes today-->
         <div id="navbar__grid--title">
         <a href="#" class="navbar__title">
-        <img class="img__logo" src="/images/WOLFTREELOGO.png" alt="WOLFTREE WITH LEAVES AROUND IT">
+        <img class="img__logo" src="/images/WOLFTREELOGO.png" alt="Wolf tree with leaves around it">
         </a>
         </div>
-
-
 
         <div id="navbar__grid--menu">
         <a class="navbar__link" href="index.html">ABOUT</a>
@@ -83,7 +81,11 @@
 
 <!--footer-->
 <footer>
-   <p id="footer__grid--middle">copyright	&copy; Paige Madeline Jones 2019</p>
+   <p id="footer__grid--top">
+   <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Newsletter</a>
+   <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Instagram</a>
+   <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
+   <img class="img__leaf"src="/images/leafstraight.png"</p>
 </footer>
 
   </body>
