--- a/findUs.html
+++ b/findUs.html
@@ -81,8 +81,8 @@
       <!--footer-->
       <footer>
          <p id="footer__grid--top">
-         <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Newsletter</a>
-         <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Instagram</a>
+         <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
+         <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
          <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
          <img class="img__leaf"src="/images/leafstraight.png"</p>
       </footer>
