--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
         <a class="navbar__link" href="findUs.html">FIND US</a>
         </div>
 
-        <!--ALERT BUTTON-->
+        <!--POPUP BUTTON-->
         <div class="main-content" id="navbar__grid--right">
         <a class="show-popup" href="#" data-showpopup="1"> <!--popup link opens on click of image-->
         <img class="img__newyears" src="/images/artdecobadge.png" alt="art deco new years eve promo">
         </a>
-
-
+        <!--POPUP THAT OPENS ON CLICK-->
         <div class="overlay-bg"> <!--gray out background when pop up is open-->
         </div>
         <div class="overlay-content popup1">
@@ -49,13 +48,6 @@
           <br><br>
         </div>
         </div>
-
-        <!--SOCIAL ICON GOING TO MOVE TO FOOTER
-        <div id="navbar__grid--right">
-        <a href="https://www.instagram.com/wolftreevt/">
-          <img class="navbar__social" src="images/instagram.png" alt="instagram logo">
-        </a>
-      </div>--->
 
       </nav>
     </header>
@@ -82,8 +74,8 @@
 <!--footer-->
 <footer>
    <p id="footer__grid--top">
-   <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Newsletter</a>
-   <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/">Instagram</a>
+   <img class="img__leaf"src="/images/leafstraight.png"><a id="footer__link" href="newsletter.html" target="_blank">Newsletter</a>
+   <img class="img__leaf"src="/images/dandelion.png"><a id="footer__link" href="https://www.instagram.com/wolftreevt/" target="_blank">Instagram</a>
    <img class="img__leaf"src="/images/leafcluster.png">&copy; Paige Madeline Jones 2019
    <img class="img__leaf"src="/images/leafstraight.png"</p>
 </footer>
