work on grid spotlight layout

--- a/newsletter.html
+++ b/newsletter.html
@@ -21,7 +21,7 @@
 <div class="form__container">
   <section class="form">
   <!--THE FORM-->
-  <form method="post" action="http://bucs601.com/submit.php">
+  <form method="post" action="contact.php">
     <fieldset>
     <!--FORM TITLE-->
     <legend class="form__title">Lets Stay In Touch!</legend>
