--- a/spotlight.html
+++ b/spotlight.html
@@ -30,25 +30,60 @@
       </nav>
     </header>
 
+     <!---SPOTLIGHT PAGE INTRO-->
      <section class="spotlight"> <!---trying out section instead of div-->
        <h1 class="menu__eat" id="menu__grid--left">LOCALS</h1>
        <h1 class="menu__drink" id="menu__grid--right">EVENTS</h1>
      </section>
 
-    <article>
-        <h3>Spotlight</h3>
+
+   <!---SPOTLIGHT PAGE LOCALS-->
+  <section class="locals__and__events">
+      <div id="locals__and__events--1--left">
         <h3>Local legend Bar Hill Gin</h3>
         <blockquote>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey. - <a href="http://www.caledoniaspirits.com">Caledonia Spirits</a></blockquote>
         <p>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</p>
-        <img src="images/barHill.jpeg" alt="picture of bar hill gin" width=300>
-    </article>
+      </div>
+      <div id="locals__and__events--1--right">
+        <img src="images/spotlight/local1.png" alt="picture of bar hill gin" width=100%>
+      </div>
 
-    <article>
-      <h3>Upcoming Events</h3>
-      <h3>Friendsgiving 2019</h3>
-      <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
-      <img src="images/Friendsgiving.jpeg" alt="picture of seasonal cocktail" width=300>
-    </article>
+      <div id="locals__and__events--2--right">
+        <h3>Upcoming Events</h3>
+        <h3>Friendsgiving 2019</h3>
+        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+      </div>
+      <div id="locals__and__events--2--left">
+        <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
+      </div>
+      <!---SPOTLIGHT PAGE EVENTS-->
+      <div id="locals__and__events--3--left">
+        <h3>Upcoming Events</h3>
+        <h3>Friendsgiving 2019</h3>
+        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+      </div>
+      <div id="locals__and__events--3--right">
+        <img src="images/spotlight/event2.png" alt="picture of seasonal cocktail" width=100%>
+      </div>
+
+      <div id="locals__and__events--4--right">
+        <h3>Upcoming Events</h3>
+        <h3>Friendsgiving 2019</h3>
+        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+      </div>
+      <div id="locals__and__events--4--left">
+        <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
+      </div>
+
+
+
+
+
+
+
+
+
+  </section>
 
     <p class="print__only">Events updated on November 11 2019. Please see http://www.wolftree.com for the most recent calendar.</p>
 
