--- a/menu.html
+++ b/menu.html
@@ -88,6 +88,17 @@
         </ul>
       </section>
 
+      <section class="eat__grid--gallery">
+      <figure class="gallery__item gallery__item--1"><img src="images/gallery/gal-1.jpeg" alt="Gallery Img 1" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--2"><img src="images/gallery/gal-2.jpeg" alt="Gallery Img 2" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--3"><img src="images/gallery/gal-3.jpeg" alt="Gallery Img 3" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--4"><img src="images/gallery/gal-4.jpeg" alt="Gallery Img 4" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--5"><img src="images/gallery/gal-5.jpeg" alt="Gallery Img 5" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--6"><img src="images/gallery/gal-6.jpeg" alt="Gallery Img 6" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--7"><img src="images/gallery/gal-7.jpeg" alt="Gallery Img 7" class="gallery__img"></figure>
+      <figure class="gallery__item gallery__item--8"><img src="images/gallery/gal-8.jpeg" alt="Gallery Img 8" class="gallery__img"></figure>
+    </section>
+
       <p class="print__only">Menu updated on November 11 2019. Please see http://www.wolftree.com for the most recent version.</p>
 
       <!--footer-->
