work on jumping to target

--- a/spotlight.html
+++ b/spotlight.html
@@ -32,8 +32,8 @@
 
      <!---SPOTLIGHT PAGE INTRO-->
      <section class="spotlight"> <!---trying out section instead of div-->
-       <h1 class="menu__eat" id="menu__grid--left">LOCALS</h1>
-       <h1 class="menu__drink" id="menu__grid--right">EVENTS</h1>
+       <a href="#locals__and__events--1--left" class="menu__eat" id="menu__grid--left">LOCALS</a><!--trying out links to sections-->
+       <a href="#locals__and__events--3--left" class="menu__drink" id="menu__grid--right">EVENTS</a>
      </section>
 
 
@@ -74,18 +74,9 @@
       <div id="locals__and__events--4--left">
         <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
       </div>
-
-
-
-
-
-
-
-
-
   </section>
 
-    <p class="print__only">Events updated on November 11 2019. Please see http://www.wolftree.com for the most recent calendar.</p>
+    <p class="print__only">Events updated on December 5 2019. Please see http://www.wolftree.com for the most recent calendar.</p>
 
     <!--footer-->
     <footer>
