--- a/spotlight.html
+++ b/spotlight.html
@@ -40,36 +40,39 @@
    <!---SPOTLIGHT PAGE LOCALS-->
   <section class="locals__and__events">
       <div id="locals__and__events--1--left">
-        <h3>Local legend Bar Hill Gin</h3>
-        <blockquote>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey. - <a href="http://www.caledoniaspirits.com">Caledonia Spirits</a></blockquote>
-        <p>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</p>
+        <h4>Local legend Bar Hill Gin</h4>
+        <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey.</h5>
+        <h5>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</h5>
+        <a href="http://www.caledoniaspirits.com" target="_blank"> <br>-Caledonia Spirits-</a>
       </div>
       <div id="locals__and__events--1--right">
         <img src="images/spotlight/local1.png" alt="picture of bar hill gin" width=100%>
       </div>
 
       <div id="locals__and__events--2--right">
-        <h3>Upcoming Events</h3>
-        <h3>Friendsgiving 2019</h3>
-        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+        <h4>Abracadabra Coffee</h4>
+        <h5>The Perfect Mixer</h5>
+        <h5>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
+        <a href="https://www.abracadabracoffeeco.com/" target="_blank">-Learn More About The Local Roasters-</a>
       </div>
       <div id="locals__and__events--2--left">
         <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
       </div>
       <!---SPOTLIGHT PAGE EVENTS-->
       <div id="locals__and__events--3--left">
-        <h3>Upcoming Events</h3>
-        <h3>Friendsgiving 2019</h3>
-        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+        <h4>Yule Tide Cheer</h4>
+        <h5>December 26th 2019</h5>
+        <h5>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
       </div>
       <div id="locals__and__events--3--right">
         <img src="images/spotlight/event2.png" alt="picture of seasonal cocktail" width=100%>
       </div>
 
       <div id="locals__and__events--4--right">
-        <h3>Upcoming Events</h3>
-        <h3>Friendsgiving 2019</h3>
-        <p>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</p>
+        <h4>Sabrina Comellas</h4>
+        <h5>January 14th 2020</h5>
+        <h5>Come out for a night of revelry to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
+        <a href="https://www.sabrinacomellas.com/" target="_blank">-Check Out Sabrinas Music-</a>
       </div>
       <div id="locals__and__events--4--left">
         <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
