complete spotlight buttons

--- a/spotlight.html
+++ b/spotlight.html
@@ -43,7 +43,7 @@
         <h4>Local legend Bar Hill Gin</h4>
         <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey.</h5>
         <h5>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</h5>
-        <a href="http://www.caledoniaspirits.com" target="_blank"> <br>-Caledonia Spirits-</a>
+        <a id="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
       </div>
       <div id="locals__and__events--1--right">
         <img src="images/spotlight/local1.png" alt="picture of bar hill gin" width=100%>
@@ -53,7 +53,7 @@
         <h4>Abracadabra Coffee</h4>
         <h5>The Perfect Mixer</h5>
         <h5>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
-        <a href="https://www.abracadabracoffeeco.com/" target="_blank">-Learn More About The Local Roasters-</a>
+        <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
       <div id="locals__and__events--2--left">
         <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
@@ -72,7 +72,7 @@
         <h4>Sabrina Comellas</h4>
         <h5>January 14th 2020</h5>
         <h5>Come out for a night of revelry to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
-        <a href="https://www.sabrinacomellas.com/" target="_blank">-Check Out Sabrinas Music-</a>
+        <a id="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
       </div>
       <div id="locals__and__events--4--left">
         <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
