--- a/spotlight.html
+++ b/spotlight.html
@@ -36,12 +36,11 @@
        <a href="#locals__and__events--3--left" class="menu__drink" id="menu__grid--right">EVENTS</a>
      </section>
 
-
    <!---SPOTLIGHT PAGE LOCALS-->
   <section class="locals__and__events">
       <div id="locals__and__events--1--left">
         <h4>Local legend Bar Hill Gin</h4>
-        <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve. Our classic gin is filled with juniper-forward botanicals are brought to a perfect balance by the floral depth of the raw honey.</h5>
+        <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve.</h5>
         <h5>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</h5>
         <a id="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
       </div>
