complete spotlight page

--- a/spotlight.html
+++ b/spotlight.html
@@ -50,8 +50,8 @@
 
       <div id="locals__and__events--2--right">
         <h4>Abracadabra Coffee</h4>
-        <h5>The Perfect Mixer</h5>
-        <h5>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
+        <h5>The Buzzy Mixer, give our Cuban take El Cafecito a try</h5>
+        <h5>Tired of netflix and chill, but leaving the house feels hard? Us too. Which is why we collaborated with Abracadabra to make some cocktails with a caffeine kick. </h5>
         <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
       <div id="locals__and__events--2--left">
@@ -61,7 +61,7 @@
       <div id="locals__and__events--3--left">
         <h4>Yule Tide Cheer</h4>
         <h5>December 26th 2019</h5>
-        <h5>Come out for a night of revelry on November 23rd 2019 to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
+        <h5>Come out for a night of revelry to celebrate. We will be making all the holiday classics - but as drinks! We'll have some special holiday games and trivia plus prizes!</h5>
       </div>
       <div id="locals__and__events--3--right">
         <img src="images/spotlight/event2.png" alt="picture of seasonal cocktail" width=100%>
@@ -70,7 +70,7 @@
       <div id="locals__and__events--4--right">
         <h4>Sabrina Comellas</h4>
         <h5>January 14th 2020</h5>
-        <h5>Come out for a night of revelry to celebrate and give thanks. We will be making all the thankgsgiving classics - but as drinks!</h5>
+        <h5>Sabrina Comellas is a singer songwriter local to Burlington Vermont. Her music is best described as Americana pop - New to the scene this year and making a splash - come listen to her debut! </h5>
         <a id="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
       </div>
       <div id="locals__and__events--4--left">
