--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,13 @@
     <!--link to CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
-    <!---Link to google fonts--->
+    <!---Link to google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
+    <!---Link to javascript-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
@@ -85,6 +88,7 @@
         local farms and companies that care about the people and our planet that makes this all possible.
         Our menu changes often - check back weekly!
         </li>
+        <li><button id="jsonOnClick">Purveyors</button></li>
         </ul>
       </section>
 
