work on find us grid layout

--- a/findUs.html
+++ b/findUs.html
@@ -30,52 +30,57 @@
       </nav>
     </header>
 
-    <section class="findUs">
-    <div id="findUs__grid--right">
-      <img src="images/manhattan.jpeg" alt="picture of a cocktail being poured" width="700">
-    </div> <!--closing tags-->
 
-    <div id="findUs__grid--left" class="hours">
-      <h3>We'll be here</h3>
-      <table>  <!--define the table-->
-          <tr>
-          <td>Monday</td> <!--table data-->
-          <td>Closed</td>
-        </tr>
-        <tr>
-          <td>Tuesday</td>
-          <td>5-10pm</td>
-        </tr>
-        <tr>
-          <td>Wednesday</td>
-          <td>5-10pm</td>
-        </tr>
-        <tr>
-          <td>Thursday</td>
-          <td>5-10pm</td>
-        </tr>
-        <tr>
-          <td>Friday</td>
-          <td>2-10pm</td>
-        </tr>
-        <tr>
-          <td>Saturday</td>
-          <td>2-10pm</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>Closed</td>
-        </tr>
-      </table> <!--close table-->
+    <!---SPOTLIGHT PAGE LOCALS-->
+   <section class="split__screen">
+       <div id="split__screen--1--left">
+         <h4>We'll be here</h4>
+         <table>  <!--define the table-->
+             <tr>
+             <td>Monday</td> <!--table data-->
+             <td>Closed</td>
+           </tr>
+           <tr>
+             <td>Tuesday</td>
+             <td>5-10pm</td>
+           </tr>
+           <tr>
+             <td>Wednesday</td>
+             <td>5-10pm</td>
+           </tr>
+           <tr>
+             <td>Thursday</td>
+             <td>5-10pm</td>
+           </tr>
+           <tr>
+             <td>Friday</td>
+             <td>2-10pm</td>
+           </tr>
+           <tr>
+             <td>Saturday</td>
+             <td>2-10pm</td>
+           </tr>
+           <tr>
+             <td>Sunday</td>
+             <td>Closed</td>
+           </tr>
+         </table> <!--close table-->
+         <h5>Find your way</h5>
+         <address>
+           121 South Main Street,<br> White River Junction,<br> Vermont 05065
+         </address>
+         <h5>Give us a ring</h5>
+         <a id="call__us" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
+       </div>
+       <div id="split__screen--1--right">
+         <img src="images/spotlight/local1.png" alt="picture of a cocktail being poured" width=100%>
+       </div>
+     </section>
 
-      <h3>Find your way</h3>
-      <address>
-        121 South Main Street,<br> White River Junction,<br> Vermont 05065
-      </address>
-      <h3>Give us a ring</h3>
-      <a class="button" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
+
+
+    <div class="hours">
       </div>
-      </section>
 
 
       <!--footer-->
