--- a/spotlight.html
+++ b/spotlight.html
@@ -32,48 +32,48 @@
 
      <!---SPOTLIGHT PAGE INTRO-->
      <section class="spotlight"> <!---trying out section instead of div-->
-       <a href="#locals__and__events--1--left" class="menu__eat" id="menu__grid--left">LOCALS</a><!--trying out links to sections-->
-       <a href="#locals__and__events--3--left" class="menu__drink" id="menu__grid--right">EVENTS</a>
+       <a href="#split__screen--1--left" class="menu__eat" id="menu__grid--left">LOCALS</a><!--trying out links to sections-->
+       <a href="#split__screen--3--left" class="menu__drink" id="menu__grid--right">EVENTS</a>
      </section>
 
    <!---SPOTLIGHT PAGE LOCALS-->
-  <section class="locals__and__events">
-      <div id="locals__and__events--1--left">
+  <section class="split__screen">
+      <div id="split__screen--1--left">
         <h4>Local legend Bar Hill Gin</h4>
         <h5>Made locally in Vermont and inspired by the views from atop the Barr Hill Nature Preserve.</h5>
         <h5>We will be serving all sorts of concoctions using this delightful liquor. If you haven't ventured up north yet - their new distillery in Montpelier is worth the trip.</h5>
         <a id="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
       </div>
-      <div id="locals__and__events--1--right">
+      <div id="split__screen--1--right">
         <img src="images/spotlight/local1.png" alt="picture of bar hill gin" width=100%>
       </div>
 
-      <div id="locals__and__events--2--right">
+      <div id="split__screen--2--right">
         <h4>Abracadabra Coffee</h4>
         <h5>The Buzzy Mixer; give our Cuban take, El Cafecito a try.</h5>
         <h5>Tired of netflix and chill, but leaving the house feels hard? Us too. Which is why we collaborated with Abracadabra to make some cocktails with a caffeine kick. </h5>
-        <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
+        <a id="split__screen" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
-      <div id="locals__and__events--2--left">
+      <div id="split__screen--2--left">
         <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
       </div>
       <!---SPOTLIGHT PAGE EVENTS-->
-      <div id="locals__and__events--3--left">
+      <div id="split__screen--3--left">
         <h4>Yule Tide Cheer</h4>
         <h5>December 26th 2019</h5>
         <h5>Come out for a night of revelry to celebrate. We will be making all the holiday classics - but as drinks! We'll have some special holiday games and trivia plus prizes!</h5>
       </div>
-      <div id="locals__and__events--3--right">
+      <div id="split__screen--3--right">
         <img src="images/spotlight/event2.png" alt="picture of seasonal cocktail" width=100%>
       </div>
 
-      <div id="locals__and__events--4--right">
+      <div id="split__screen--4--right">
         <h4>Sabrina Comellas</h4>
         <h5>January 14th 2020</h5>
         <h5>Sabrina Comellas is a singer songwriter local to Burlington Vermont. Her music is best described as Americana pop - New to the scene this year and making a splash - come listen to her debut! </h5>
         <a id="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
       </div>
-      <div id="locals__and__events--4--left">
+      <div id="split__screen--4--left">
         <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
       </div>
   </section>
