complete findus page

--- a/findUs.html
+++ b/findUs.html
@@ -32,8 +32,8 @@
 
 
     <!---SPOTLIGHT PAGE LOCALS-->
-   <section class="split__screen">
-       <div id="split__screen--1--left">
+   <section class="find__us">
+       <div id="findUs--left">
          <h4>We'll be here</h4>
          <table>  <!--define the table-->
              <tr>
@@ -41,47 +41,25 @@
              <td>Closed</td>
            </tr>
            <tr>
-             <td>Tuesday</td>
-             <td>5-10pm</td>
+             <td>Tuesday - Thursday</td>
+             <td>4pm - 10pm</td>
            </tr>
            <tr>
-             <td>Wednesday</td>
-             <td>5-10pm</td>
-           </tr>
-           <tr>
-             <td>Thursday</td>
-             <td>5-10pm</td>
-           </tr>
-           <tr>
-             <td>Friday</td>
-             <td>2-10pm</td>
-           </tr>
-           <tr>
-             <td>Saturday</td>
-             <td>2-10pm</td>
-           </tr>
-           <tr>
-             <td>Sunday</td>
-             <td>Closed</td>
+             <td>Friday - Sunday</td>
+             <td>2pm - 10pm</td>
            </tr>
          </table> <!--close table-->
-         <h5>Find your way</h5>
+         <h4>Find your way</h4>
          <address>
-           121 South Main Street,<br> White River Junction,<br> Vermont 05065
+           Located in the heart of downtown WRJ <br>121 South Main Street, White River Junction, <br>Vermont 05065
          </address>
-         <h5>Give us a ring</h5>
+         <h4>Give us a ring</h4>
          <a id="call__us" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
        </div>
-       <div id="split__screen--1--right">
-         <img src="images/spotlight/local1.png" alt="picture of a cocktail being poured" width=100%>
+       <div id="findUs--right">
+         <img src="images/flute.png" alt="picture of a cocktail being poured" width=100%>
        </div>
      </section>
-
-
-
-    <div class="hours">
-      </div>
-
 
       <!--footer-->
       <footer>
