--- a/index.html
+++ b/index.html
@@ -53,23 +53,26 @@
     </header>
 
     <section class="intro">
-
       <h1 id="intro__grid--top">The New Bar In Town</h1>
-      <a class="button" id="intro__grid--bottom" href="#">ORIGIN STORY</a>  <!--using a link for click to call-->
-      <!--paragraph 1 this is not coded to work yet as I think javascript will be needed to create a popup box that isnt a whole new page
-      <p>
+      <a class="button" id="intro__grid--bottom" href="#origin__story">ORIGIN STORY</a>  <!--using a link for click to call-->
+    </section>
+
+    <section id="origin__story">
+      <h4>Origin Story</h4>
+      <h5>
       A "wolf tree" is the lone tree that remains after most of the forest has been cleared for farming.
       Livestock and other animals gather at such trees. The whole point of the bar, is as a love letter to Vermont and the Upper Valley.
       There are really dynamic, fun and unique flavors that exist in this region that people don't necessarily associate with cocktails,
       sumac as an example. Such ingredients will be used to infuse spirits or accompany spirits, to adulterate, showcase and highlight things for craft cocktails that are hopefully larger than the sum of their parts.
       So come around and join us at WolfTree.
-      </p>-->
+    </h5>
     </section>
 
     <section class="music">
     <h4>What We are Listening To: The Game by Milky Chance</h4>
     <audio controls src="audio/TheGame.mp3"></audio>
     </section>
+
 
 <!--footer-->
 <footer>
