--- a/spotlight.html
+++ b/spotlight.html
@@ -52,7 +52,7 @@
         <h4>Abracadabra Coffee</h4>
         <h5>The Buzzy Mixer; give our Cuban take, El Cafecito a try.</h5>
         <h5>Tired of netflix and chill, but leaving the house feels hard? Us too. Which is why we collaborated with Abracadabra to make some cocktails with a caffeine kick. </h5>
-        <a id="split__screen" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
+        <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
       <div id="split__screen--2--left">
         <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
