--- a/newsletter.html
+++ b/newsletter.html
@@ -30,7 +30,7 @@
     <label for="firstName" class="form__h2">First Name:
     <input type="text" id="firstName" name="firstName" pattern="[A-Za-z]{2,}" required></label>
     <label for="email" class="form__h2">Email:
-    <input type="text" id="email" name="email" pattern="Josh|Harsh|Laura" required></label>
+    <input type="text" id="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required></label>
     </section>
 
     <!--Radio Buttons-->
