remove default blue focus outline

--- a/newsletter.html
+++ b/newsletter.html
@@ -20,7 +20,7 @@
 <div class="form__container">
   <section class="form">
   <!--THE FORM-->
-  <form method="post" action="contact.php">
+  <form method="post" action="#">
     <fieldset>
     <!--FORM TITLE-->
     <legend class="form__title">Lets Stay In Touch!</legend>
