fix audio player

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     </section>
 
     <section class="music">
-    <h4>What We are Listening To: The Game by Milky Chance</h4>
+    <h4>What We are Listening To:</h4>
+    <h4>The Game by Milky Chance</h4>
     <audio controls src="audio/TheGame.mp3"></audio>
     </section>
 
