compress images for web

--- a/findUs.html
+++ b/findUs.html
@@ -57,7 +57,7 @@
          <a id="call__us" href="tel:802-356-7860">CALL US</a>  <!--using a link for click to call-->
        </div>
        <div id="findUs--right">
-         <img src="images/flute.png" alt="picture of a cocktail being poured" width=100%>
+         <img src="images/flute.jpeg" alt="picture of a cocktail being poured" width=100%>
        </div>
      </section>
 
