--- a/spotlight.html
+++ b/spotlight.html
@@ -45,7 +45,7 @@
         <a id="spotlight__link" href="http://www.caledoniaspirits.com" target="_blank">Caledonia Spirits</a>
       </div>
       <div id="split__screen--1--right">
-        <img src="images/spotlight/local1.png" alt="picture of bar hill gin" width=100%>
+        <img src="images/spotlight/local1.jpeg" alt="picture of bar hill gin" width=100%>
       </div>
 
       <div id="split__screen--2--right">
@@ -55,7 +55,7 @@
         <a id="spotlight__link" href="https://www.abracadabracoffeeco.com/" target="_blank">The Local Roasters</a>
       </div>
       <div id="split__screen--2--left">
-        <img src="images/spotlight/local2.png" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/local2.jpeg" alt="picture of seasonal cocktail" width=100%>
       </div>
       <!---SPOTLIGHT PAGE EVENTS-->
       <div id="split__screen--3--left">
@@ -64,7 +64,7 @@
         <h5>Come out for a night of revelry to celebrate. We will be making all the holiday classics - but as drinks! We'll have some special holiday games and trivia plus prizes!</h5>
       </div>
       <div id="split__screen--3--right">
-        <img src="images/spotlight/event2.png" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/event2.jpeg" alt="picture of seasonal cocktail" width=100%>
       </div>
 
       <div id="split__screen--4--right">
@@ -74,7 +74,7 @@
         <a id="spotlight__link" href="https://www.sabrinacomellas.com/" target="_blank">Check Out Sabrinas Music</a>
       </div>
       <div id="split__screen--4--left">
-        <img src="images/spotlight/event3.png" alt="picture of seasonal cocktail" width=100%>
+        <img src="images/spotlight/event3.jpeg" alt="picture of seasonal cocktail" width=100%>
       </div>
   </section>
 
